--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -41,3 +41,14 @@ galera_yumrepo_key: https://yum.mariadb.org/RPM-GPG-KEY-MariaDB
 galera_initcluster_flag: '/etc/mycnf-cluster-{{ galera_cluster_name }}.started'
 
 galera_port: "4567"
+
+galera_firewalld_zone: public
+galera_firewalld_add_rules: false
+galera_firewalld_ports:
+  - 3306/tcp
+  - 4567/tcp
+  - 4568/tcp
+  - 4444/tcp
+
+galera_log_directory: /var/log/mariadb
+galera_log_owner: mysql
