--- a/tasks/create-users.yml
+++ b/tasks/create-users.yml
@@ -4,9 +4,10 @@
     name: "{{ item.name }}"
     collation: "{{ item.collation | default('utf8_general_ci') }}"
     encoding: "{{ item.encoding | default('utf8') }}"
-    state: present
+    state: '{{ item.state|default("present") }}'
   with_items: "{{ mysql_databases }}"
   run_once: yes
+  tags: galera-users
 
 - name: Ensure MySQL users are present.
   mysql_user:
